--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>松子壳安全工具 - 专业SQL注入漏洞检测平台</title>
     <meta name="description" content="松子壳安全工具 - 专业级SQL注入漏洞检测与数据提取平台，采用Web3设计，提供智能扫描、实时监控和敏感信息检测功能">
     
+    <!-- Vercel域名验证 -->
+    <meta name="cryptomus" content="b78ea0f5" />
+    
     <!-- 字体引入 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
