--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <!-- Vercel域名验证 -->
     <meta name="cryptomus" content="b78ea0f5" />
+    <meta name="cryptomus" content="a954cdac" />
     
     <!-- 字体引入 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
